start and stop symbol subscription & show stream messages as text

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -19,6 +19,10 @@
     </div>
     <div id="status-container">
       <p id="status-stream">Stream: Disconnected</p>
+      <p id="status-symbol">Symbol: N/A</p>
+    </div>
+    <div id="stream-messages-container">
+      <p id="stream-messages"></p>
     </div>
     <div id="chart-container">
 
