--- a/server/static/index.html
+++ b/server/static/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Stock & Crypto Streamer</title>
-    <!-- <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.development.js"></script> -->
-    <script src="./static/js/main.js" defer></script>
-    <link rel="stylesheet" href="./static/css/main.css" />
+    <script src="https://unpkg.com/lightweight-charts@5.0.9/dist/lightweight-charts.standalone.production.js"></script>
+    <script src="/static/js/main.js" defer></script>
+    <link rel="stylesheet" href="/static/css/main.css" />
   </head>
   <body>
     <div id="header-container">
@@ -21,11 +21,11 @@
       <p id="status-stream">Stream: Disconnected</p>
       <p id="status-symbol">Symbol: N/A</p>
     </div>
+    <div id="chart-container">
+      <div id="chart" style="width:100%; height:420px;"></div>
+    </div>
     <div id="stream-messages-container">
       <p id="stream-messages"></p>
-    </div>
-    <div id="chart-container">
-
     </div>
   </body>
 </html>
