Alpaca socket changed from test to IEX and symbol textbox added

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -15,7 +15,11 @@
       <button id="btn-connect-stream">Connect Stream</button>
       <button id="btn-start-stream">Start Streaming</button>
       <button id="btn-stop-stream">Stop Streaming</button>
-      <button id="btn-disconnect-stream">Disconnected Streaming</button>
+      <button id="btn-disconnect-stream">Disconnect Streaming</button>
+    </div>
+    <div id="symbol-container">
+      <label for="input-symbol">Symbol:</label>
+      <input type="text" id="input-symbol" placeholder="e.g., AAPL, BTCUSD" />  
     </div>
     <div id="status-container">
       <p id="status-stream">Stream: Disconnected</p>
