Replaced all javascript alert dialog to HTML/CSS/JS flash message

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -31,5 +31,8 @@
     <div id="stream-messages-container">
       <p id="stream-messages"></p>
     </div>
+    <div id="flash-message-container" class="flash-message-container hidden">
+      <div id="flash-message" class="flash-message">Flash Message</div>
+    </div>
   </body>
 </html>
